// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Basic icon 1`] = `
<div
  class="rc-picker-input"
>
  <input
    readonly=""
    size="12"
    value="1990-09-03"
  />
  <span
    class="rc-picker-suffix"
  >
    <span
      class="suffix-icon"
    />
  </span>
  <span
    class="rc-picker-clear"
  >
    <span
      class="suffix-icon"
    />
  </span>
</div>
`;

exports[`Picker.Basic pass data- & aria- & role 1`] = `
<div
  class="rc-picker"
>
  <div
    class="rc-picker-input"
  >
    <input
      aria-label="3334"
      data-test="233"
      readonly=""
      role="search"
      size="12"
      value=""
    />
  </div>
</div>
`;

exports[`Picker.Basic should render correctly in rtl 1`] = `
<div
  class="rc-picker rc-picker-rtl"
>
  <div
    class="rc-picker-input"
  >
    <input
      readonly=""
      size="12"
      value=""
    />
  </div>
</div>
`;
